Added ShowAnswerer function that now displays the answerers and their info on the page. Needs some styling

--- a/index.html
+++ b/index.html
@@ -47,6 +47,17 @@
 			<dt>Asker</dt>
 				<dd class="asker"></dd>
 		</dl>
+
+		<dl class="result answerer">
+			<dt>Display Name</dt>
+				<dd class="display-name"></dd>
+			<dt>Reputation</dt>
+				<dd class="reputation"></dd>
+			<dt>Accept Rate</dt>
+				<dd class="accept-rate"></dd>
+			<dt>Link</dt>
+				<dd class="link"><a href="" target="_blank"></a></dd>
+		</dl>
 		<div class="error">
 			<p>Uh-oh! Something went wrong with your request. Here's what we know:</p>
 		</div>
