Made the final touches to what's being displayed for TopAnswerers and added the fail method at the end as well

--- a/index.html
+++ b/index.html
@@ -49,13 +49,13 @@
 		</dl>
 
 		<dl class="result answerer">
-			<dt>Display Name</dt>
+			<dt>Display Name: </dt>
 				<dd class="display-name"></dd>
-			<dt>Reputation</dt>
+			<dt>Reputation: </dt>
 				<dd class="reputation"></dd>
-			<dt>Accept Rate</dt>
+			<dt>Accept Rate: </dt>
 				<dd class="accept-rate"></dd>
-			<dt>Link</dt>
+			<dt>Link to User Profile: </dt>
 				<dd class="link"><a href="" target="_blank"></a></dd>
 		</dl>
 		<div class="error">
